--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.17.1",
-    "nodemon": "^2.0.2"
+    "express-xml-bodyparser": "^0.3.0",
+    "nodemon": "^2.0.2",
+    "util": "^0.12.2"
   }
 }
